--- a/style.css
+++ b/style.css
@@ -1,246 +1,152 @@
-body{
-    font-family: 'Montserrat', sans-serif;
-}
-
-header {
-    background-color: #BBBBBB;
-    padding: 20px 0;
-}
-
-.caja{
-    width: 940px;
-    position: relative;
-    margin: 0 auto;
-}
-
-nav{
-    position: absolute;
-    top:110px;
-    right: 0;
-}
-
-nav li{
-    display: inline;
-    margin: 0 0 0 15px;
-}
-
-nav a{
-    text-transform: uppercase;
-    color: #000000;
-    font-weight: bold;
-    font-size: 22px;
+header{
+    background-color: rgb(200, 224, 216);
+    width: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+ }
+ a{
     text-decoration: none;
-}
+ }
+ 
+ header ul{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+ }
 
-nav a:hover{
-    color: #c78c19;
-    text-decoration: underline;
-}
+ header ul li{
+    margin: 10px;
+ }
+ img{ 
+    width: 310px;
+ }
 
-.productos{
-    width: 940px;
-    margin: 0 auto;
-    padding: 50px;
-}
-
-
-.productos li{
-    display: inline-block;
-    text-align: center;
-    width: 30%;
-    vertical-align: top;
-    margin: 0 1.5%;
-    padding: 30px 20px;
-    box-sizing: border-box;
-    border: 2px solid #000000;
-    border-radius: 10px;
-}
-
-.productos li:hover{
-    border-color:#c78c19;
-}
-
-.productos li:active{
-    border-color:#088c19;
-}
-
-.productos h2{
+h1{ 
     font-size: 30px;
-    font-weight: bold;
+    color: rgb(155, 113, 194);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.productos li:hover h2{
-    font-size: 33px;
-}
-
-.producto-descripcion{
-    font-size: 18px;
-}
-
-.producto-precio{
+p{ 
     font-size: 20px;
-    font-weight: bold;
-    margin-top:10px;
+    color: rgb(131, 116, 116);
 }
 
-footer{
-    text-align: center;
-    background: url(imagenes/bg.jpg);
-    padding:40px;
-}
-
-.copyright{
-    color:#FFFFFF;
-    font-size: 13px;
-    margin:20px;
-}
-
-form{
-    margin: 40px 0;
-}
-
-form label, form legend{
-    display: block;
-    font-size: 20px;
-    margin: 0 0 10px;
-}
-
-.input-padron{
-    display: block;
-    margin: 0 0 20px;
-    padding: 10px 25px;
-    width: 50%;
-}
-
-.checkbox{
-    margin:20px 0;
-}
-
-.enviar{
-    width: 40%;
-    padding: 15px 0;
-    font-size: 18px;
-    font-weight: bold;
-    color:white;
-    background: orange;
-    border:none;
-    border-radius: 5px;
-    transition: 1s all;
-    cursor:pointer;
-}
-
-.enviar:hover{
-    background: darkorange;
-    transform: scale(1.2);
-}
-
-table{
-    margin: 40px 40px;
-}
-
-thead{
-    background: #555555;
-    color:white;
-    font-weight: bold;
-}
-
-td,th{
-    border: 1px solid #000000;
-    padding: 8px 15px;
-}
-
-/*Aquí inicia el CSS para nuestra home*/
-.banner{
+.enunciado{
     width: 100%;
+    height: 100%;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
 }
+.enunciado h1{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.carousel img{
+    width: 1920px;
+    height: 600px;
+    display: flex;
+    flex-direction: row;
+    margin: 20px 0 20px 0;
+}
+
 
 .principal{
-    padding: 3em 0;
-    background: #FEFEFE;
-    width: 940px;
-    margin: 0 auto; 
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 20px 0 20px 0;
+    height: 70%;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+}
+.principal h1{
+    justify-content: center;
+}
+p{
+   width: 50%;
+   margin: 10px o 10px 0;
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.titulo-principal{
-    text-align: center;
-    font-size: 2em;
-    margin: 0 0 1em;
-    clear:left;
-}
+.contenedor{ 
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 10px o 10px 0;
+    background-color: aliceblue;
+ }
 
-.principal p{
-    margin: 0 0 1em;
-}
+ .caja{ 
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+ }
 
-.principal strong{
-    font-weight: bold;
-}
-
-.principal em{
-    font-style: italic;
-}
-
-.utensilios{
-    width: 120px;
-    float:left;
-    margin: 0 20px 20px 0;
-}
-
-.mapa{
-    padding: 3em 0;
-    background: linear-gradient(#FEFEFE, #888888)
-}
-
-.mapa p{
-    margin: 0 0 2em;
-    text-align: center;
-}
-
-.mapa-contenido{
-    width: 940px;
-    margin: 0 auto;
-}
-
-.diferenciales{
-    padding: 3em 0;
-    background: #888888;
-}
-
-.contenido-diferenciales{
-    width: 640px;
-    margin: 0 auto;
-}
-
-.lista-diferenciales{
-    width: 40%;
-    display: inline-block;
-    vertical-align: top;
-}
-
-.items{
-    line-height: 1.5;
-}
-
-.items:before{
-    content:"★"
-}
-
-.items:first-child{
-    font-weight: bold;
-}
-
-.imagen-diferenciales{
+ .caja h1{
+    justify-content: center;
+    align-items: center;
+ }
+ .caja img{
+    height: 150px;
     width: 60%;
-    transition: 400ms;
-    box-shadow: 10px 10px 30px 15px #000000;
+ }
+
+ .caja p{
+    display: flex;
+    flex-direction: row;
+    font-size: 16px;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+ }
+
+.caja1 img{
+    width: auto;
+    height: 100%;
 }
 
-.imagen-diferenciales:hover{
-    opacity: 0.3;
+
+.caja2 img{
+width: auto;
+height: 100%;
 }
 
-.video{
-    width: 560px;
-    margin: 1em auto;
-}
 
+ #enlaces{
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 10px o 10px 0;
+ }
+
+#enlaces iframe{
+    padding: 10px;
+    margin: 10px;
+}
+.final{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+.final p{
+    width: 100%;
+    margin-left: 0%;
+    margin-right: auto;
+    font-size: 16px;
+    text-align: right;
+}
